--- a/simpleMCTS/simpleMCTS.vcxproj
+++ b/simpleMCTS/simpleMCTS.vcxproj
@@ -86,6 +86,7 @@
     <ClInclude Include="ConnectFour.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameState.h" />
+    <ClInclude Include="StateRecorder.h" />
     <ClInclude Include="MCTSNode.h" />
     <ClInclude Include="MCTSPlayer.h" />
     <ClInclude Include="Player.h" />
