--- a/simpleMCTS/simpleMCTS.vcxproj.filters
+++ b/simpleMCTS/simpleMCTS.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="ConnectFour.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="StateRecorder.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
